--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -41,3 +41,7 @@ jobs:
       - name: Terraform Plan
         working-directory: terraform/envs/prod
         run: terraform plan -input=false
+
+      - name: Terraform Apply
+        working-directory: terraform/envs/prod
+        run: terraform apply -auto-approve -input=false
